N and T hot keys for opening the side panels are reversed in the image editor #38160

Closed
opened 2014-01-11 09:31:19 +01:00 by gandalf3 · 11 comments
Member

System Information
Archlinux
Nvidia 7900GT

Blender Version
Broken:

Short description of error
The shortcuts for opening the tool shelf and the properties region are reversed in the UV/Image editor.

In all the other editors, N brings up the properties panel on the left, and T brings up the tool shelf on the right.

However, in the Image editor N brings up the panel on the right which appears to contain tools (e.g. grease pencil, brush/painting settings, etc.) and T brings up the panel on the left which contains property like information (histogram, scopes, etc.)

There are a few exceptions to the tools being on the left and the properties on the right, for instance the image dimensions are on the left. Perhaps these should be switched around for consistency?

I know this seems to be a rather well known thing, however I don't understand the rational behind this behavior (assuming it is intentional)
If this is not a bug, could someone please explain why this works the way it does?
Thanks

Exact steps for others to reproduce the error

  1. Open the UV/Image editor
  2. Press N or T
  3. The opposite panel will appear
**System Information** Archlinux Nvidia 7900GT **Blender Version** Broken: * Blender 2.69 * Blender 17a4ba2 **Short description of error** The shortcuts for opening the tool shelf and the properties region are reversed in the UV/Image editor. In all the other editors, N brings up the properties panel on the left, and T brings up the tool shelf on the right. However, in the Image editor N brings up the panel on the right which appears to contain tools (e.g. grease pencil, brush/painting settings, etc.) and T brings up the panel on the left which contains property like information (histogram, scopes, etc.) There are a few exceptions to the tools being on the left and the properties on the right, for instance the image dimensions are on the left. Perhaps these should be switched around for consistency? I know this seems to be a rather well known thing, however I don't understand the rational behind this behavior (assuming it is intentional) If this is not a bug, could someone please explain why this works the way it does? Thanks **Exact steps for others to reproduce the error** 1. Open the UV/Image editor 2. Press N or T 3. The opposite panel will appear
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Added subscriber: @AndrewButtery

Added subscriber: @AndrewButtery

I have coded a fix for the sides that the properties and scopes appear - see D201.

Have not moved any information from either.

 - andrew
I have coded a fix for the sides that the properties and scopes appear - see [D201](https://archive.blender.org/developer/D201). Have not moved any information from either. - andrew

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Thomas Dinges self-assigned this 2014-01-12 00:52:40 +01:00

Fixed.

Fixed.

Added subscriber: @AndyDavies-3

Added subscriber: @AndyDavies-3

Hey guys,

Since when was this a bug? Flipped or not it's been like this for 4 years and changing it is just going to mess with the muscle memory of current users. :(
I can understand changing the hotkeys for consistency but is it really needed to move the panels too?

At least before all the important information was in the centre column where as now we have the scopes panel. :/

Hey guys, Since when was this a bug? Flipped or not it's been like this for 4 years and changing it is just going to mess with the muscle memory of current users. :( I can understand changing the hotkeys for consistency but is it really needed to move the panels too? At least before all the important information was in the centre column where as now we have the scopes panel. :/

Hi Andy,

Thomas and I went through and made all sidebar opening consistent as it was confusing to have to remember which key to press to get which sidebar for each editor... as to what goes in which Image Editor sidebar check out #38371 for more discussion about this. There will be reorganising of the sidebar content before the release (fingers crossed)...

  • andrew
Hi Andy, Thomas and I went through and made all sidebar opening consistent as it was confusing to have to remember which key to press to get which sidebar for each editor... as to what goes in which Image Editor sidebar check out #38371 for more discussion about this. There will be reorganising of the sidebar content before the release (fingers crossed)... - andrew

Thanks for the reply @AndrewButtery
It's just super frustrating to work one way for years and then have it changed all of a sudden. This wasn't a minor change and like I said before I can understand that people would want to switch the hotkeys...I just don't feel that it was needed to change the position or the pop outs, especially since there wasn't any massive outcry or anything. Currently this is just causing me headaches. :P

Thanks for the link to the Editor sidebar btw. I will chime in there too.

Thanks for the reply @AndrewButtery It's just super frustrating to work one way for years and then have it changed all of a sudden. This wasn't a minor change and like I said before I can understand that people would want to switch the hotkeys...I just don't feel that it was needed to change the position or the pop outs, especially since there wasn't any massive outcry or anything. Currently this is just causing me headaches. :P Thanks for the link to the Editor sidebar btw. I will chime in there too.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38160
No description provided.