Fix T38160, N and T sidebars in Image Editor are swapped. Now the Properties are on the right side, which is consistent with other editors.

Differential Revision: https://developer.blender.org/D201